# machine-learning

./: 3trees.ipynb  README.md  requirements.txt
01-basic/: basics.ipynb
02-regression/: car_fuel.ipynb
03-classification/: course-lead-scoring.ipynb
04-evaluation/: metrics.ipynb
05-deployment/: Dockerfile  main.py  predict-fastapi.py  predict-flask.py  predict-test.py  pyproject.toml
07-credit-fraud-detection/: Dockerfile  README.md  app.py  credit-card-fraud-detection.ipynb  credit_fraud_detect_model.json  predict-test.py  requirements.txt  scaler.pkl
07-stock-prediction/: prediction-netflix.ipynb  stock-prediction.ipynb
08-deep-learning/: hairstyle-classification.ipynb
