[project]
name = "05-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.121.1",
    "flask>=3.1.2",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
    "waitress>=3.0.2",
    "wget>=3.2",
]
